Fix spacing

--- a/packages/data-bite/src/scss/bite.scss
+++ b/packages/data-bite/src/scss/bite.scss
@@ -191,7 +191,7 @@
     .cdc-callout__body {
       display: grid;
       align-items: start;
-      column-gap: 1rem;
+      column-gap: 0.5rem;
       row-gap: 0.75rem;
       flex: auto;
     }
